Updated Homework/Tasks 7, 9, 28-32.

--- a/Урок 07-09. Введение в Python/Python - PT07.html
+++ b/Урок 07-09. Введение в Python/Python - PT07.html
@@ -182,7 +182,7 @@ unless you do.</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 7.3</h2>
-        <p>Выведите в консоль одной строкой "H-E-L-L-O W*O*R*L*D", используя два <code class="python"><b>print</b></code>, <code class="python"><b>sep</b></code> и <code class="python"><b>end</b></code>.</p>
+        <p>Выведите в консоль одной строкой <code class="python"><b>"H-E-L-L-O W*O*R*L*D"</b></code>, используя два <code class="python"><b>print</b></code>, <code class="python"><b>sep</b></code> и <code class="python"><b>end</b></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>H-E-L-L-O W*O*R*L*D</code></pre>
