--- a/Урок 07-09. Введение в Python/Python - PT09.html
+++ b/Урок 07-09. Введение в Python/Python - PT09.html
@@ -221,7 +221,7 @@
         <h2>Практическое Задание 9.10</h2>
         <p><span class="hl-text">Teston Lebra</span> хочет сделать вклад в банк под годовой процент, но не хочет долго высчитывать, сколько денег у него будет через несколько лет. Напишите программу, которая <span class="hl-text">запрашивает с консоли начальную сумму вклада</span>, <span class="hl-text">годовую процентную ставку</span> и <span class="hl-text">количество лет</span>, затем <span class="hl-text">выводит в консоль сумму вклада через указанное количество лет</span>.</p>
         <p>Программа должна считать по формуле:
-          <br><span class="grey"><b><span class="number">&ltсумма_вклада&gt</span> = <span class="number">&ltначальная_сумма_вклада&gt</span> * ((<span class="number">1</span> + <span class="number">&ltгодовая_процентная_ставка&gt</span> / <span class="number">100</span>) ** <span class="number">&ltколичество_лет&gt</span>)</b></span>
+          <br><code><span class="grey"><b><span class="number">&ltсумма_вклада&gt</span> = <span class="number">&ltначальная_сумма_вклада&gt</span> * ((<span class="number">1</span> + <span class="number">&ltгодовая_процентная_ставка&gt</span> / <span class="number">100</span>) ** <span class="number">&ltколичество_лет&gt</span>)</b></span></code>
         </p>
         <h3>Консоль:</h3>
         <div class="console">
